# keystroke-auth

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
keystroke_auth/: __init__.py  constants.py
keystroke_auth/data/: __init__.py  loader.py  splits.py
keystroke_auth/evaluation/: __init__.py  eer.py  system.py
keystroke_auth/features/: __init__.py  engineering.py
keystroke_auth/models/: __init__.py  binary.py  one_class.py
keystroke_auth/visualization/: __init__.py  _style.py  eda_plots.py  model_plots.py  system_plots.py
scripts/: run_demo.py  run_system_eval.py
tests/: conftest.py  test_eer.py  test_features.py  test_loader.py  test_models.py  test_splits.py
